--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".OperatorActivity2" />
         <activity android:name=".OperatorActivity3" />
         <activity android:name=".OperatorActivity4" />
+        <activity android:name=".OperatorActivity5" />
     </application>
 
 </manifest>
